--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ notitle: true
 
 # groups of columns of {roles: list, width: num, image: bool}
 role-tables:
-- - roles: [pi, postdoc, staff, ra]
+- - roles: [pi, postdoc, staff, ra, vscholar]
     width: 4
     image: true
   - roles: [grad, vstudent, ugrad]
@@ -22,8 +22,7 @@ role-tables:
 
 <div class="jumbotron">
     <p>
-        The <b>Awesome Research Group</b> at <b>Example U</b> does all sorts of
-        research. Here is a place where we tell you exactly what that is!
+        The <b>Lowary Research Group</b> at <b>University of Alberta</b>. Our research program is focused in the areas of synthetic organic chemistry (with an emphasis in carbohydrate chemistry), conformational analysis and the design of novel therapeutic agents that act by inhibiting carbohydrate-processing enzymes.  
     </p>
 </div>
 
