--- a/people.html
+++ b/people.html
@@ -3,7 +3,7 @@ layout: default
 title: People
 
 picture-role-groups:
-- {roles: [pi, postdoc, staff, ra], width: 4}
+- {roles: [pi, postdoc, staff, ra, vscholar], width: 4}
 - {roles: [grad, vstudent, ugrad], width: 8}
 
 no-picture-role-groups:
